# TeoComp_IFES

./: .ghci  ARCHITECTURE.md  README.md  automata-converter.cabal  shell.nix
Docs/: CLAUDE.md  README.md  Resumo_curso.hs  Resumo_curso.md  entrada_dfa3.yaml  entrada_nfa2.yaml  entrada_nfae1.yaml  entrada_nfae4.yaml  saida_dfa3.yaml  saida_nfa2.yaml  saida_nfae4.yaml  teste_saida.yaml
Regex_CrossWord/: atividades.md
app/: Main.hs
examples/: nfae_example.yaml
src/: Conversion.hs  Pipeline.hs  Types.hs  YamlIO.hs
test/: GHCiTests.hs
